--- a/Fixcord.App/Controls/ChatControl.xaml
+++ b/Fixcord.App/Controls/ChatControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Fixcord.App.ChatControl"
+<UserControl x:Class="Fixcord.App.ChatControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,6 +15,6 @@
 
 		<Button Content="Refresh" Click="Button_Click" Grid.Row="0" />
 		<ListBox x:Name="messages" Grid.Row="1" />
-		<TextBox x:Name="messageInput" Grid.Row="2" KeyDown="MessageInput_KeyDown" />
+		<!--<TextBox x:Name="messageInput" Grid.Row="2" KeyDown="MessageInput_KeyDown" />-->
 	</Grid>
 </UserControl>
