--- a/Fixcord.App/MainWindow.xaml
+++ b/Fixcord.App/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Fixcord.App.MainWindow"
+<Window x:Class="Fixcord.App.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,13 +16,14 @@
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*" />
-			<RowDefinition Height="12" />
+			<RowDefinition Height="20" />
 		</Grid.RowDefinitions>
 
 		<local:GuildSelector Grid.Column="0" Grid.Row="0" />
 		<local:ChannelSelector Grid.Column="2" Grid.RowSpan="2" />
-		<local:ChatControl Grid.Column="4" Grid.RowSpan="2" />
+		<local:ChatControl Grid.Column="4" Grid.Row="0" />
 
-		<TextBox x:Name="tokenInput" Grid.Column="0" Grid.Row="1" KeyDown="tokenInput_KeyDown" />
+		<TextBox x:Name="tokenInput" Grid.Column="0" Grid.Row="1" KeyDown="TokenInput_KeyDown" />
+		<TextBox x:Name="messageInput" Grid.Column="4" Grid.Row="1" KeyDown="MessageInput_KeyDown" />
 	</Grid>
 </Window>
