--- a/Fixcord.App/Controls/ChannelSelector.xaml
+++ b/Fixcord.App/Controls/ChannelSelector.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Fixcord.App.ChannelSelector"
+<UserControl x:Class="Fixcord.App.ChannelSelector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 	<StackPanel>
-		<Button Content="Refresh" Click="Button_Click" />
 		<ListBox x:Name="ChannelList" SelectionChanged="ChannelList_SelectionChanged" SelectionMode="Single" />
 	</StackPanel>
 </UserControl>
