--- a/Fixcord.App/Controls/ChatControl.xaml
+++ b/Fixcord.App/Controls/ChatControl.xaml
@@ -7,14 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="20" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="20" />
-		</Grid.RowDefinitions>
-
-		<Button Content="Refresh" Click="Button_Click" Grid.Row="0" />
-		<ListBox x:Name="messages" Grid.Row="1" />
-		<!--<TextBox x:Name="messageInput" Grid.Row="2" KeyDown="MessageInput_KeyDown" />-->
+		<ListBox x:Name="messages" />
 	</Grid>
 </UserControl>
