--- a/Fixcord.App/Controls/GuildSelector.xaml
+++ b/Fixcord.App/Controls/GuildSelector.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Fixcord.App.GuildSelector"
+<UserControl x:Class="Fixcord.App.GuildSelector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
