--- a/Fixcord.App/Controls/ChatControl.xaml
+++ b/Fixcord.App/Controls/ChatControl.xaml
@@ -1,12 +1,14 @@
-<UserControl x:Class="Fixcord.App.ChatControl"
+<UserControl x:Class="Fixcord.App.Controls.ChatControl"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-			 xmlns:local="clr-namespace:Fixcord.App"
+			 xmlns:local="clr-namespace:Fixcord.App.Controls"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="450" d:DesignWidth="800">
 	<Grid>
 		<ListBox x:Name="messages" />
+		<!--TESTING-->
+		<!--<local:ChatItem x:Name="chatItem" />-->
 	</Grid>
 </UserControl>
