--- a/Fixcord.App/Controls/GuildSelector.xaml
+++ b/Fixcord.App/Controls/GuildSelector.xaml
@@ -1,13 +1,18 @@
-<UserControl x:Class="Fixcord.App.GuildSelector"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Fixcord.App"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-	<StackPanel>
-		<Button Content="Refresh" Click="Button_Click" />
-		<ListBox x:Name="GuildsList" SelectionChanged="GuildsList_Selected" SelectionMode="Single" />
-	</StackPanel>
+<UserControl x:Class="Fixcord.App.Controls.GuildSelector"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:local="clr-namespace:Fixcord.App"
+			 mc:Ignorable="d" 
+			 d:DesignHeight="450" d:DesignWidth="800">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="auto" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+		
+		<Button Grid.Row="0" Content="Refresh" Click="Button_Click" />
+		<ListBox Grid.Row="1" x:Name="GuildsList" SelectionChanged="GuildsList_Selected" SelectionMode="Single" />
+	</Grid>
 </UserControl>
