--- a/Fixcord.App/Controls/ChatItem.xaml
+++ b/Fixcord.App/Controls/ChatItem.xaml
@@ -1,23 +1,23 @@
 <UserControl x:Class="Fixcord.App.Controls.ChatItem"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Fixcord.App.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="400">
-	<Grid Background="Bisque">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="50" />
-			<ColumnDefinition Width="*" />
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:local="clr-namespace:Fixcord.App.Controls"
+			 mc:Ignorable="d" 
+			 d:DesignHeight="200" d:DesignWidth="400">
+	<StackPanel>
+		<!--<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="20" />
+			<ColumnDefinition Width="*"  />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="50" />
 			<RowDefinition Height="auto" />
-		</Grid.RowDefinitions>
+		</Grid.RowDefinitions>-->
 
-		<Image x:Name="authorProfilePicture" Grid.Column="0" Grid.Row="0" />
-		<TextBlock x:Name="authorName" Background="Brown" Grid.Row="0" />
-		<TextBlock x:Name="messageText" Background="Gray" Text="Hey" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
-	</Grid>
+		<!--<Image x:Name="authorProfilePicture" Grid.Row="0" Grid.Column="0" />-->
+		<Label x:Name="authorName" Grid.Row="0" Grid.Column="1" Foreground="DarkRed" />
+		<TextBlock x:Name="messageText" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
+	</StackPanel>
 </UserControl>
