--- a/Fixcord.App/Controls/ChatControl.xaml
+++ b/Fixcord.App/Controls/ChatControl.xaml
@@ -13,6 +13,7 @@
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<StackPanel>
+						<Label Content="{Binding Author}" Foreground="DarkRed" />
 						<TextBlock Text="{Binding Content}" />
 					</StackPanel>
 				</DataTemplate>
