I am a genius somehow

--- a/Fixcord.Uwp/ChatControl.xaml
+++ b/Fixcord.Uwp/ChatControl.xaml
@@ -12,7 +12,7 @@
 	<Grid>
 		<!--<ItemsControl x:Name="messages" ItemsSource="{Binding Source=listabc, Mode=OneWay}" />-->
 
-		<ListBox x:Name="messagelisttest">
+		<ListBox x:Name="messagelisttest" x:DefaultBindMode="OneTime">
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<StackPanel>
