--- a/Fixcord.Uwp/GuildSelector.xaml
+++ b/Fixcord.Uwp/GuildSelector.xaml
@@ -14,6 +14,9 @@
 			<RowDefinition Height="auto" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
 
 		<Button Grid.Row="0" Content="Refresh" Click="Button_Click" />
 		<ListBox Grid.Row="1" x:Name="GuildsList" SelectionChanged="GuildsList_Selected" SelectionMode="Single" />
