--- a/Fixcord.Uwp/Controls/GuildSelector.xaml
+++ b/Fixcord.Uwp/Controls/GuildSelector.xaml
@@ -1,13 +1,13 @@
 <UserControl
-    x:Class="Fixcord.Uwp.Controls.GuildSelector"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Fixcord.Uwp.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+	x:Class="Fixcord.Uwp.Controls.GuildSelector"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="using:Fixcord.Uwp.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	mc:Ignorable="d"
+	d:DesignHeight="300"
+	d:DesignWidth="400">
 
 	<Grid>
 		<Grid.RowDefinitions>
@@ -18,7 +18,10 @@
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 
-		<Button Grid.Row="0" Content="Refresh" Click="Button_Click" />
-		<ListBox Grid.Row="1" x:Name="GuildsList" SelectionChanged="GuildsList_Selected" SelectionMode="Single" />
+		<StackPanel Orientation="Horizontal" Grid.Row="0">
+			<Button Content="Refresh" Click="Button_Click" />
+			<Button Content="Settings" Click="Settings_Clicked" />
+		</StackPanel>
+		<ListView Grid.Row="1" x:Name="GuildsList" SelectionChanged="GuildsList_Selected" SelectionMode="Single" Background="{x:Null}" />
 	</Grid>
 </UserControl>
