--- a/Fixcord.Uwp/Pages/MainPage.xaml
+++ b/Fixcord.Uwp/Pages/MainPage.xaml
@@ -1,5 +1,5 @@
 <Page
-	x:Class="Fixcord.Uwp.MainPage"
+	x:Class="Fixcord.Uwp.Pages.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="using:Fixcord.Uwp.Controls"
@@ -28,7 +28,6 @@
 		<local:GuildSelector Grid.Column="0" Grid.Row="0" />
 		<local:ChannelSelector Grid.Column="1" Grid.Row="0" />
 		<local:ChatControl Grid.Column="2" Grid.Row="0" />
-
-		<TextBox x:Name="messageInput" Grid.Column="4" Grid.Row="1" KeyDown="MessageInput_KeyDown" />
+		
 	</Grid>
 </Page>
