--- a/Fixcord.Uwp/Pages/SettingsPage.xaml
+++ b/Fixcord.Uwp/Pages/SettingsPage.xaml
@@ -1,5 +1,5 @@
 <Page
-    x:Class="Fixcord.Uwp.SettingsPage"
+    x:Class="Fixcord.Uwp.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Fixcord.Uwp"
@@ -8,7 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <StackPanel Margin="12">
+        <TextBlock Text="Bot Token" />
+        <PasswordBox x:Name="tokenInput" PlaceholderText="Insert token here" KeyDown="TokenInput_KeyDown" />
 
-    </Grid>
+        <Button Content="Save" Click="Save_Click" Background="{ThemeResource SystemAccentColor}" />
+    </StackPanel>
 </Page>
