--- a/Fixcord.Uwp/Pages/SettingsPage.xaml
+++ b/Fixcord.Uwp/Pages/SettingsPage.xaml
@@ -14,6 +14,7 @@
         <TextBlock Text="Bot Token" />
         <PasswordBox x:Name="tokenInput" PlaceholderText="Insert token here" KeyDown="TokenInput_KeyDown" />
 		<ToggleButton x:Name="MultiWinModeEnabled" Content="Multi-Window-Mode" />
-		<Button Content="Save" Click="Save_Click" Background="{ThemeResource SystemAccentColor}" />
+		<ToggleButton x:Name="notificationsToggle" Content="Enable notifications" />
+        <Button Content="Save" Click="Save_Click" Background="{ThemeResource SystemAccentColor}" />
     </StackPanel>
 </Page>
